# grpc-demo

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  make.ps1
cmake/: CMakeLists.txt  copydll.cmake  deploy.cmake  generatepath.cmake  mergefiles.cmake  windeployqt.cmake
config/: config.h.in
scripts/: path-info.ps1
src/: CMakeLists.txt
src/mainprocess/: CMakeLists.txt
src/mainprocess/src/: main.cpp  myclient.hpp  widget.cpp  widget.h  widget.ui
src/protos/: CMakeLists.txt  rpcmessage.proto
src/subprocess/: CMakeLists.txt
src/subprocess/src/: main.cpp  rpcserviceimpl.hpp  widget.cpp  widget.h  widget.ui
tests/: a.cpp
